# sdx-fabric

./: .gitignore  README.md  fabric_aw-sdx-with-auth_demo.ipynb  knit10-sdx-layer2.ipynb  knit11-sdx-ddos-w-p4.ipynb  pyproject.toml  sdxapi0922.ipynb  sdxclient-0.10.1.ipynb  setup.cfg
.github/workflows/: publish.yml
sdx-client/: README.md  pyproject.toml
sdx-client/sdxclient/: client.py  config.py  http.py
sdx-client/tests/: test_gateway_auth.py
sdx-client/tests/tokens/: expired.jwt  fabric_valid.jwt  malformed_1.txt  orcid_valid.jwt
sdxclient/: README.md  client.py  config.py  http.py  selection_utils.py  validator.py
