[metadata]
name = sdxclient
version = 0.1.0
description = Thin Python client for SDX routes with guided endpoint selection for L2VPN creation
long_description = file: README.md
long_description_content_type = text/markdown
author = Luis Vera
author_email = lmarinve@fiu.edu
license = MIT
license_files = LICENSE
url = https://github.com/atlanticwave-sdx/sdx-fabric
project_urls =
    Homepage = https://github.com/atlanticwave-sdx/sdx-fabric
    Issues = https://github.com/atlanticwave-sdx/sdx-fabric/issues

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Topic :: Internet
    Topic :: System :: Networking
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9,<3.13
install_requires =
    requests>=2.28
    fabrictestbed-extensions>=1.5.0

[options.packages.find]
where = .
include = sdxclient

